--- a/habit-tracker/src/App.css
+++ b/habit-tracker/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+.container {
+  max-width: 80%;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  border-radius: 5px;
+  padding: 3px 8px;
+  margin: 0 0 5px 5px;
+  background-color: blue;
   color: white;
+  font-size: 16px;
+  transition: ease-in 0.2s;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+button:disabled {
+  background-color: cornflowerblue;
+  transition: ease-in 0.2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="text"] {
+  font-size: 16px;
+  width: 200px;
+}
+
+.bottom-margin {
+  margin-bottom: 10px;
+}
+
+.habit-list {
+  margin: 10px;
+  padding-inline-start: 15px;
 }
