--- a/habit-tracker/src/App.css
+++ b/habit-tracker/src/App.css
@@ -1,9 +1,9 @@
 .container {
-  max-width: 80%;
+  max-width: 90%;
   margin: 0 auto;
 }
 
-button {
+.blue-button {
   border-radius: 5px;
   padding: 3px 8px;
   margin: 0 0 5px 5px;
@@ -14,14 +14,45 @@ button {
   cursor: pointer;
 }
 
-button:disabled {
+.blue-button:disabled {
   background-color: cornflowerblue;
+  transition: ease-in 0.2s;
+}
+
+.red-button {
+  border-radius: 5px;
+  padding: 3px 8px;
+  margin: 0 0 5px 5px;
+  background-color: #cd5858;
+  color: white;
+  font-size: 16px;
+  transition: ease-in 0.2s;
+  cursor: pointer;
+}
+
+.red-button:disabled {
+  background-color: rgb(226, 192, 192);
+  transition: ease-in 0.2s;
+}
+
+.emoji-button {
+  border: blue solid 1px;
+  height: 26px;
+  font-size: 12px;
+  padding: 2px 8px;
+  margin: 0 2px 5px 10px;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.emoji-button:hover {
+  background-color: rgb(193, 211, 244);
   transition: ease-in 0.2s;
 }
 
 input[type="text"] {
   font-size: 16px;
-  width: 200px;
 }
 
 .bottom-margin {
@@ -30,5 +61,5 @@ input[type="text"] {
 
 .habit-list {
   margin: 10px;
-  padding-inline-start: 15px;
+  padding-inline-start: 10px;
 }
