--- a/03-beyond-the-basics/starting-point/habit-tracker/src/index.css
+++ b/03-beyond-the-basics/starting-point/habit-tracker/src/index.css
@@ -1,5 +1,4 @@
-body,
-input {
+body, input {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
